# GoogleAds-mcp

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  config.example.json  entrypoint.sh  pyproject.toml  run_server.py
src/: __init__.py  __main__.py  auth.py  error_handler.py  server.py  tools.py  tools_campaigns.py  tools_complete.py  tools_reporting.py  utils.py
